# nlq-on-aws

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  build.sh  docker-compose.yml  pyproject.toml
.chainlit/translations/: es-MX.json
cloudformation/: NlqEcsBedrockStack.yaml  NlqEcsOpenAIStack.yaml  NlqMainStack.yaml
src/: app_chainlit.py  app_flask.py  model.py  moma_examples.yaml  settings.py
